--- a/MIS/Views/PoliceSection/Index.cshtml
+++ b/MIS/Views/PoliceSection/Index.cshtml
@@ -68,7 +68,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a asp-controller="policesection" asp-action="Hierarchy" class="btn btn-light">Go to section</a>
+                            <a asp-controller="policesection" asp-action="Hierarchy" asp-route-id="@obj.Id" class="btn btn-light">Go to section</a>
                         </div>
                     </div>
 
