--- a/MIS/wwwroot/css/site.css
+++ b/MIS/wwwroot/css/site.css
@@ -188,10 +188,58 @@ code {
     border-radius: 5px
 }
 
-    .search-icon:hover {
-        color: #fff !important
-    }
+.search-icon:hover {
+    color: #fff !important
+}
 .icon{
     font-size : 14px;
     margin-right : 5px;
+}
+
+
+.section{
+    position : relative;
+    margin-top : 60px;
+}
+
+.section-info {
+    position: absolute;
+    top: 20px;
+    left: 80%;
+    padding: 20px 40px;
+    border: 1px solid #eee;
+    box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+}
+
+.section-name , .section-address{
+    font-size : 17px;
+    margin-bottom : 10px;
+    color : #444;
+    display : flex;
+    padding : 3px 3px;
+    align-items : center;
+}
+
+.section-info > *{
+    border-bottom : 2px solid #eee;
+}
+
+
+.policeman-info{
+    padding : 5px 0px;
+    margin-bottom : 5px;
+    color : #666;
+    border-bottom : 1px solid #eee;
+}
+
+.outlined-button {
+    box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+}
+
+.new-subordinate{
+    margin-top : 25px;
+}
+
+.new-subordinate-header{
+    color : #444;
 }
