--- a/MIS/wwwroot/css/details.css
+++ b/MIS/wwwroot/css/details.css
@@ -23,17 +23,16 @@
 
 .list-group
 {   
-    margin-top:20px;
-    display:inline-block;
     color:aqua;
     padding:5px 5px 5px 5px;
+    text-align:center;
 }
 
-#mySpan{
-    background-color:cornflowerblue;
-    color:black;
-    margin-left:10px;
-    margin-right:10px;
-    padding:5px 5px 5px 5px;
-
+#mySpan {
+    background-color: cornflowerblue;
+    color: black;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px 5px 5px 5px;
+    text-align: center;
 }
