--- a/MIS/Views/PoliceSection/Delete.cshtml
+++ b/MIS/Views/PoliceSection/Delete.cshtml
@@ -49,7 +49,7 @@
                             <input type="submit" class="btn btn-danger w-100" value="Delete" />
                         </div>
                         <div class="col">
-                            <a class="btn btn-danger w-100" asp-action="Index"> Go Back</a>
+                            <a class="btn btn-primary w-100" asp-action="Index"> Go Back</a>
                         </div>
                     </div>
                 </div>
