--- a/MIS/Views/PoliceSection/Hierarchy.cshtml
+++ b/MIS/Views/PoliceSection/Hierarchy.cshtml
@@ -1,4 +1,19 @@
-﻿<div class="tf-tree tf-gap-lg">
+﻿@model MSI.Model.PoliceSection
+
+
+<form asp-action="AddPolicemanToStation" asp-controller="PoliceSection">
+    <div class="input-group mb-4 mt-4 display-1">
+        <input type="hidden" name="id" value="@Model.Id" />
+        <input type="text" class="form-control" placeholder="Policeman e-mail ..." name="email">
+        <div class="input-group-append">
+            <button class="btn btn-primary" type="submit">Add to section</button>
+        </div>
+    </div>
+</form>
+
+
+
+<div class="tf-tree tf-gap-lg">
     <ul>
         <li>
             <span class="tf-nc">1</span>
@@ -21,7 +36,57 @@
         </li>
     </ul>
 </div>
-<div class="col">
-    <input type="submit" class="btn btn-info w-100" value="Create" />
-</div>
+
+
+
+
+@*<div class="tf-tree tf-gap-lg">
+        <ul>
+            @foreach (var obj in Model.Policemen)
+            {
+            <li>
+                @if (obj.Rank.Equals(0))
+                {
+                    <span class="tf-nc">@obj.Name</span>
+                }
+                <ul>
+                    <li>
+                        @if (obj.Rank.Equals(1))
+                        {
+                            <span class="tf-nc">@obj.Name</span>
+                        }
+                        <ul>
+                            <li>
+                                @if (obj.Rank.Equals(2))
+                                {
+                                    <span class="tf-nc">@obj.Name</span>
+                                }
+                                <ul>
+                                    <li>
+                                        @if (obj.Rank.Equals(3))
+                                        {
+                                            <span class="tf-nc">@obj.Name</span>
+                                        }
+                                        <ul>
+                                            <li>
+                                                @if (obj.Rank.Equals(4))
+                                                {
+                                                    <span class="tf-nc">@obj.Name</span>
+                                                }
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            }
+        </ul>
+    </div>*@
+
+
+
+
 
